# open-defender-icap

./: .dockerignore  .env-prod.example  .env.example  .gitignore  .gitleaksignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  TRADEMARKS.md  example_commands.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: stage-doc-hygiene.yml  stage24-config-gate.yml
cli/odctl/: Cargo.toml
cli/odctl/src/: main.rs
cli/odctl/tests/: cli_integration.rs
config/: admin-api.json  canonical-taxonomy.json  icap.json  llm-worker.json  page-fetcher.json  policies.json  policy-engine.json  reclass-worker.json
crates/common-types/: Cargo.toml
crates/config-core/: Cargo.toml
crates/policy-dsl/: Cargo.toml
crates/taxonomy/: Cargo.toml
crates/taxonomy/src/: activation.rs  lib.rs
deploy/docker/: README.md  docker-compose.golden-profiles.yml  docker-compose.integration.yml  docker-compose.lmstudio.yml  docker-compose.ollama.yml  docker-compose.smoke.yml  docker-compose.test.yml  docker-compose.yml  prometheus-rules.yml  prometheus.yml  rust.Dockerfile
deploy/elastic/: README.md  ilm-policy.json  (+1 more)
docs/: api-catalog.md  architecture.md  authz-smoke-matrix.md  compose-plan.md  config-files-reference.md  engine-adaptor-spec.md  env-file-organization-plan.md  env-vars-reference.md  faq.md  fast-testing-deployment.md  iam-rollout.md  iam.md  infra-config-reference.md  stage11-acceptance.md  user-guide.md
implementation-plan/: ai-hybrid-model-support.md  continuous-validation-log.md  stage-01-icap-hot-path.md  stage-02-policy-engine.md  stage-03-persistence-overrides.md  stage-04-async-classification.md  stage-05-admin-ui-cli.md  stage-06-reporting-observability.md  stage-07-testing-ops.md  stage-08-hybrid-ai.md  stage-09-content-aware-classification.md  stage-10-checklist.md  stage-10-frontend-management-parity.md  stage-11-checklist.md  stage-11-rbac-user-group-management.md  stage-12-canonical-taxonomy-lockdown.md  stage-12-checklist.md  stage-13-domain-first-classification-scope.md  stage-14-pending-hardening-output-invalid-fallback.md  stage-15-cursor-pagination-hard-cutover.md  stage-16-checklist.md  stage-16-policy-action-outcome-hardening.md  stage-16-verification.md  stage-17-checklist.md  stage-17-content-pending-reliability.md  stage-17-verification.md  stage-18-checklist.md  stage-18-facebook-e2e-reliability.md  stage-18-verification.md  stage-19-checklist.md  stage-19-taxonomy-enforcement-parity.md  stage-19-verification.md  stage-20-checklist.md  stage-20-ops-diagnostics-automation.md  stage-20-verification.md  stage-21-checklist.md  stage-21-stream-consumer-groups.md  stage-21-verification.md  stage-22-checklist.md  stage-22-cursor-parity-policy-reporting.md  (+13 more)
rfc/: ai-hybrid-model-support.md  stage-01-icap-hot-path.md  stage-02-policy-engine.md  stage-03-persistence-overrides.md  stage-04-async-classification.md  stage-05-admin-ui-cli.md  stage-06-reporting-observability.md  stage-07-testing-ops.md  stage-08-hybrid-ai.md  stage-09-content-aware-classification.md  stage-10-frontend-management-parity.md  stage-11-rbac-user-group-management.md  stage-12-canonical-taxonomy-lockdown.md  stage-13-domain-first-classification-scope.md  stage-14-pending-hardening-output-invalid-fallback.md  stage-15-cursor-pagination-hard-cutover.md  stage-23-dashboard-traffic-intelligence.md  stage-24-reliability-operability-hardening.md  stage-plan.md
scripts/: check_stage_docs.py
services/admin-api/: Cargo.toml
services/admin-api/migrations/: 0001_overrides.sql  0002_audit_events.sql  0003_classifications.sql  0004_spec20_artifacts.sql  0005_page_contents.sql  0006_classification_requests.sql  0007_policies.sql  0008_iam_schema.sql  0009_iam_audit_integrity.sql  0010_local_auth.sql  0011_taxonomy_activation.sql  0012_drop_review_queue.sql  0013_remove_review_role.sql  0014_drop_page_contents_raw_bytes.sql  0015_domain_first_classification_scope.sql  0016_cursor_pagination_indexes.sql  0017_page_content_fetch_context.sql  0018_drop_reporting_aggregates.sql  0019_local_username_and_user_tokens.sql  0020_iam_user_protection_and_lifecycle.sql  0021_iam_user_token_version.sql  0022_policy_cursor_indexes.sql  0023_iam_refresh_tokens.sql  0024_iam_service_account_expiry.sql  0025_overrides_active_scope_uniqueness.sql  0026_page_contents_retention_cap.sql
services/admin-api/src/: audit.rs  auth.rs  cache.rs  cache_entries_api.rs  classification_requests.rs  classifications.rs  cli_logs.rs  iam.rs  main.rs  metrics.rs  ops_health.rs  page_contents.rs  pagination.rs  policies.rs  reporting.rs  reporting_es.rs  taxonomy.rs
services/admin-api/tests/: iam_audit.rs  migrations.rs
services/event-ingester/: Cargo.toml
services/event-ingester/src/: bootstrap.rs  config.rs  elastic.rs  main.rs  metrics.rs  models.rs
services/icap-adaptor/: Cargo.toml
services/icap-adaptor/src/: cache.rs  config.rs  icap.rs  jobs.rs  main.rs  metrics.rs  normalizer.rs  pending_client.rs  policy_client.rs
services/policy-engine/: Cargo.toml
services/policy-engine/migrations/: 0001_init.sql  0002_policy_versions.sql  0003_policy_audit_events.sql
services/policy-engine/src/: audit.rs  auth.rs  config.rs  evaluator.rs  main.rs  models.rs  store.rs
tests/: README.md  content-pending-reliability.sh  content-pending-smoke.sh  cursor-parity-audit.sh  integration.sh  page-fetch-flow.sh  policy-cursor-smoke.sh  policy-runtime-smoke.sh  proxy-production-linux-e2e.sh  release-gate.sh  stage06_ingest.sh  stream-consumer-restart-smoke.sh  streams-consumer-audit.sh  taxonomy-parity.sh  unit.sh
web-admin/: .env.example  cypress.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
workers/llm-worker/: Cargo.toml
workers/llm-worker/src/: main.rs  metrics.rs  schema.rs
workers/page-fetcher/: Cargo.toml
workers/page-fetcher/src/: main.rs  metrics.rs
workers/reclass-worker/: Cargo.toml
workers/reclass-worker/src/: main.rs  metrics.rs
(+389 files in other folders)
