[package]
name = "odctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.11", features = ["json", "default-tls"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate"] }
policy-dsl = { path = "../../crates/policy-dsl" }
common-types = { path = "../../crates/common-types" }
clap = { version = "3.2.25", features = ["derive", "env"] }
uuid = { version = "1", features = ["serde", "v4"] }
dirs = "5"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.1"
tempfile = "3.10"
wiremock = "0.5"
