[package]
name = "admin-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.7.5", features = ["macros"] }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config-core = { path = "../../crates/config-core" }
serde_json = { workspace = true }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "json", "chrono", "migrate", "macros"] }
redis = { workspace = true }
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json", "default-tls"] }
prometheus = { workspace = true }
once_cell = { workspace = true }
policy-dsl = { path = "../../crates/policy-dsl" }
common-types = { path = "../../crates/common-types" }
taxonomy = { path = "../../crates/taxonomy" }
argon2 = "0.5"
rand = "0.8"
thiserror = { workspace = true }
