[package]
name = "icap-adaptor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
common-types = { path = "../../crates/common-types" }
config-core = { path = "../../crates/config-core" }
url = { workspace = true }
idna = { workspace = true }
reqwest = { version = "0.11", features = ["json", "default-tls"] }
serde_json = { workspace = true }
redis = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
futures = "0.3"
urlencoding = "2"
