[package]
name = "policy-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
common-types = { path = "../../crates/common-types" }
config-core = { path = "../../crates/config-core" }
axum = { version = "0.7.9", features = ["macros"] }
serde_json = { workspace = true }

[dev-dependencies]
tower = "0.5"
