[package]
name = "policy-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
common-types = { path = "../../crates/common-types" }
config-core = { path = "../../crates/config-core" }
axum = { version = "0.7.9", features = ["macros"] }
serde_json = { workspace = true }
tower = "0.5"
policy-dsl = { path = "../../crates/policy-dsl" }
once_cell = { workspace = true }
tokio-stream = "0.1"
parking_lot = "0.12"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "json", "migrate", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json", "default-tls"] }
taxonomy = { path = "../../crates/taxonomy" }

[dev-dependencies]
tower = "0.5"
