[package]
name = "llm-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
common-types = { path = "../../crates/common-types" }
config-core = { path = "../../crates/config-core" }
redis = { workspace = true }
tokio-stream = "0.1"
serde_json = { workspace = true }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "default-tls"] }
prometheus = { workspace = true }
once_cell = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
taxonomy = { path = "../../crates/taxonomy" }

[dev-dependencies]
portpicker = "0.1"
