[package]
name = "reclass-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config-core = { path = "../../crates/config-core" }
redis = { workspace = true }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = "0.4"
once_cell = { workspace = true }
prometheus = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
url = { workspace = true }
